# oscar-shareable

./: .env  .env.example  .gitignore  CROWDSEC-ENFORCEMENT.md  Dockerfile  README.md  build_logs.txt  docker-compose.yml
.agents/rules/: testing-guidelines.md
.agents/workflows/: live-test.md
cloudflared/: Dockerfile  config.yml  config.yml.example  entrypoint.sh
crowdsec/: README.md  acquis.yaml  collections.txt
crowdsec/bouncers/: crowdsec-cloudflare-bouncer.yaml
docker-oscar/: Dockerfile
frontend/: admin.html  faq.html  how-to-uploader.html  index.html  invite.html  package.json  privacy-security-policy.html  vite.config.js
frontend/src/: admin.js  app.js  index.css  invite.js
nginx/: Dockerfile  crowdsec-nginx-bouncer.conf.template  nginx.conf  nginx.conf.template
nginx/docker-entrypoint.d/: 10-crowdsec-config.sh
secure-uploader/: .dockerignore  .env  Dockerfile  README.md  db.js  docker-compose.yml  middleware.js  nginx.conf  package.json  server.js
secure-uploader-rs/: Cargo.toml  Dockerfile
secure-uploader-rs/public/: admin.html  admin.js  app.js  faq.html  help-tabs.js  how-to-uploader.html  index.html  invite.html  styles.css
secure-uploader-rs/src/: auth.rs  config.rs  db.rs  main.rs  proxy.rs  upload.rs  utils.rs
secure-uploader/public/: app.js  help-tabs.js  how-to-uploader.html  index.html  privacy-security-policy.html  styles.css
secure-uploader/public/images/: manifest.json
secure-uploader/scripts/: check-csp-compliance.js  start-secure-uploader.sh  traefik-debug.sh
secure-uploader/traefik/: dynamic.yml  traefik.yml
(+3 files in other folders)
