[package]
name = "secure-uploader"
version = "3.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
axum = { version = "0.7.5", features = ["macros", "multipart", "ws"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs", "cors", "trace", "set-header", "normalize-path", "limit"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
jsonwebtoken = "9.3.0"
dotenvy = "0.15.7"
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
chrono = "0.4.38"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
base64 = "0.22.0"
hex = "0.4.3"
hyper = "1.3.1"
reqwest = { version = "0.12.3", features = ["json", "stream", "rustls-tls"], default-features = false }
tokio-tungstenite = { version = "0.21.0", features = ["rustls-tls-native-roots"] }
bytes = "1.6.0"
futures = "0.3.30"
futures-util = "0.3.30"
regex = "1.10.4"
url = "2.5.0"
anyhow = "1.0.82"
rustls = { version = "0.23.5", features = ["ring"] }
rustls-pemfile = "2.1.2"
aes-gcm = "0.10.3"
rsa = { version = "0.9.6", features = ["sha2"] }
sha2 = "0.10.8"
rand = "0.8.5"
tokio-util = "0.7.10"
urlencoding = "2.1.3"
async-recursion = "1.0.5"
